@@ -1,3 +1,8 @@
+2002-07-22  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/session.c: add a "geometry" option.
+	* src/main.c (main): parse geometry if specified.
+
 2002-07-20  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/Makefile.am (INCLUDES): fixed locale paths.
